force-app/main/default/objects/QAobj501__c/QAobj501__c.object-meta.xml
<CustomObject>
    <label>QAobj501</label>
    <nameField>
        <label>QAobj501 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QAobj501s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>