force-app/main/default/objects/QAobj501__c/fields/f1__c.field-meta.xml
<CustomField>
    <fullName>f1__c</fullName>
    <label>f1</label>
    <type>Phone</type>
</CustomField>