force-app/main/default/objects/QAobj501__c/fields/F2__c.field-meta.xml
<CustomField>
    <fullName>F2__c</fullName>
    <label>F2</label>
    <type>Email</type>
</CustomField>