force-app/main/default/objects/QAobj501__c/fields/F3__c.field-meta.xml
<CustomField>
    <fullName>F3__c</fullName>
    <description>axzcv v</description>
    <label>F3</label>
    <type>Phone</type>
</CustomField>